--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
         <div class="digital"></div>
     </div>
 
+    <div id="cronometro">
+        <div id="reloj">0 : 00 : 00 : 00</div>
+        <form name="cron" action="#">
+          <input type="button" value="Play" name="empieza" />
+          <input type="button" value="Pause" name="para" /><br/>
+          <input type="button" value="Continue" name="continua" />
+          <input type="button" value="Restart" name="reinicia" />
+        </form>
+    </div>
+
 </body>
 </html>
